@@ -17,6 +17,10 @@
 2002-03-02  gettextize  <bug-gnu-utils@gnu.org>
 
 	* Makefile.in.in: Upgrade to gettext-0.10.38.
+
+2002-03-02  gettextize  <bug-gnu-utils@gnu.org>
+
+	* Makefile.in.in: Upgrade to gettext-0.10.38.
 	* cat-id-tbl.c: Remove file.
 	* stamp-cat-id: Remove file.
 
